--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
 <resources>
 
     <string name="app_name">Master Games</string>
-    <string name="app_description">This is a collection of more than 290,000 master games.\n\nIn order to view these games select \'Search master games\' from within the Chess PGN Master app.</string>
+    <string name="app_description">This is a collection of more than 300,000 master games.\n\nIn order to view these games select \'Search master games\' from within the Chess PGN Master app.</string>
     <string name="action_license">License</string>
     <string name="install">Install Chess PGN Master</string>
     <string name="start">Start Chess PGN Master</string>
-    <string name="license">License: GPLv2, source is available here: https://code.google.com/p/mastergames/</string>
+    <string name="license">License: GPLv2, source is available here: https://github.com/gkalab/mastergames</string>
 
 </resources>
